# ManimPresentations

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
src/presentations/: __init__.py
src/presentations/numpy_workshop/: __init__.py  manim_array.py
